--- a/API/dockerfile
+++ b/API/dockerfile
@@ -1,57 +1,35 @@
-FROM python:3.11-slim AS runtime
+# Imagen base ligera de Python
+FROM python:3.10-slim
 
+# Evitar preguntas interactivas en apt
+ENV DEBIAN_FRONTEND=noninteractive
 
-# Evitar prompts y reducir tamaño
-ENV DEBIAN_FRONTEND=noninteractive \
-PIP_NO_CACHE_DIR=1 \
-PYTHONDONTWRITEBYTECODE=1 \
-PYTHONUNBUFFERED=1
+# Instalamos dependencias del sistema necesarias para:
+# - OpenCV (libgl1, libglib2.0-0)
+# - pyttsx3 (espeak / libespeak1)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    libgl1 \
+    libglib2.0-0 \
+    espeak \
+    libespeak1 \
+    && rm -rf /var/lib/apt/lists/*
 
-
+# Directorio de trabajo dentro del contenedor
 WORKDIR /app
 
+# Copiamos primero requirements para aprovechar caché de Docker
+COPY requirements.txt .
 
-# Dependencias del sistema: ffmpeg (para audio), libgl (opencv),
-# espeak-ng (motor TTS para pyttsx3 en Linux), ALSA (audio backend)
-RUN apt-get update && apt-get install -y --no-install-recommends \
-build-essential \
-ffmpeg \
-libgl1 \
-espeak-ng libespeak-ng1 \
-libasound2 \
-curl && \
-rm -rf /var/lib/apt/lists/*
+# Instalamos dependencias de Python
+RUN pip install --no-cache-dir -r requirements.txt
 
-
-# Copiamos requirements y luego el código
-COPY requirements.txt ./
-RUN pip install -r requirements.txt
-
-
-# Si vas a usar YOLO con pesos por defecto, ultralytics los descargará en runtime.
-# Puedes predescargarlos y agregarlos como capa para acelerar el arranque, opcional.
-
-
+# Copiamos el resto del código
 COPY . .
 
-
-# Puerto del servicio
+# Puerto donde expones FastAPI con uvicorn
 EXPOSE 8000
 
-
-# Salud básica (opcional)
-HEALTHCHECK --interval=30s --timeout=5s --retries=5 CMD curl -fsS http://localhost:8000/ || exit 1
-
-
-# Uvicorn con 1 worker para WebSockets
+# Comando para arrancar el servidor
+# Si tu archivo no es main.py, cambia "main:app"
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-
-
-# FROM python:3.11-slim
-# WORKDIR /app
-# RUN apt-get update && apt-get install -y build-essential ffmpeg libgl1 && rm -rf /var/lib/apt/lists/*
-# COPY requirements.txt ./
-# RUN pip install --no-cache-dir -r requirements.txt
-# COPY . .
-# EXPOSE 8000
-# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
